Fix label value to include dark mode prop on child kits

--- a/app/pb_kits/playbook/pb_label_value/_label_value.scss
+++ b/app/pb_kits/playbook/pb_label_value/_label_value.scss
@@ -4,12 +4,4 @@
   [class^=pb_caption_kit]  {
     margin-bottom: $space-xs/1.5;
   }
-  &.dark {
-    .pb_body_kit {
-      @include pb_body_dark
-    }
-    .pb_title_kit_4 {
-      @include pb_title_dark;
-    }
-  }
 }
